--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,16 +33,35 @@ dependencies:
     sdk: flutter
   email_validator: ^2.0.1
   flutter_easyloading: ^3.0.3
+  google_fonts: ^2.3.1
+  date_format: ^2.0.6
+  dio: ^4.0.6
+  http: ^0.13.4
+  html: ^0.15.0
+  flutter_secure_storage: ^5.0.2
+  flutter_datetime_picker: ^1.5.1
+  uuid: ^3.0.6
+  intl: ^0.17.0
+
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   palette_generator:
+  hive: ^2.1.0
+  hive_flutter: ^1.1.0
+  hive_generator: ^1.1.2
+  build_runner: ^2.1.10
+  get_it: ^7.2.0
+  firebase_core: ^1.17.0
+  firebase_auth: ^3.3.18
+  cloud_firestore: ^3.1.15
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -50,6 +69,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
+ 
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -67,6 +87,10 @@ flutter:
     - assets/images/
     - assets/images/diyet_image/
     - assets/images/opening_image/
+    - assets/images/gunluk_yorum_image/gunluk_yorum_kucuk/
+    - assets/images/gunluk_yorum_image/gunluk_yorum_buyuk/
+    - assets/data/burc_mitoloji.json
+    - assets/images/mitoloji_image/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
